Ajout pages/Modif

--- a/apirp/src/style/index.css
+++ b/apirp/src/style/index.css
@@ -274,29 +274,22 @@
     background-color: #fff;
   }
   
-  .dropdown-toggle > a::after {
-    content:" ▼";
+  .button1 {
+  padding: 10px 20px;
+  margin-top: 30px;
+  font-size: 1rem;
+  background-color: #CD212A;
+  color: white;
+  border: solid 2px #CD212A;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  
   }
 
-  .dropdown-toggle:hover {
-    color: #008C45;
-  }
-  
-  /* Styliser les éléments du menu déroulant */
-  .dropdown-menu {
-    float: none;
-    width: 100%;
-    text-align: left;
-   
-  }
-  
-  .dropdown-item {
-    padding: 10px;
-    border-bottom: none;
-  }
-  
-  /* Style pour les liens dans le menu déroulant */
-  .dropdown-item:hover,
-  .dropdown-item:focus {
-    color: #008C45; /* Couleur de fond au survol */
-  }
+  .button1:hover{
+    background-color: #fff;
+    color: #CD212A;
+    border: solid 2px #CD212A;
+    border-radius: 5px;
+}
